--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -40,9 +40,10 @@
 }
 
 .logo-image {
-  height: 40px;
+  height: 50px;
   width: auto;
   transition: transform var(--transition-normal);
+  filter: brightness(0) invert(1);
 }
 
 .logo:hover .logo-image {
